--- a/.github/workflows/responder.yml
+++ b/.github/workflows/responder.yml
@@ -13,5 +13,5 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          msg: "Thanks a lot for adding to this list 💖 Trully appreciate it!"
+          msg: "Thanks a lot for joining this list 💖 Truly appreciate it!"
           check_for_duplicate_msg: false
